--- a/src/components/Projetos/Card/Card.module.scss
+++ b/src/components/Projetos/Card/Card.module.scss
@@ -4,8 +4,10 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  margin: 2rem;
-  gap: 2rem;
+  margin: 2rem 0;
+  gap: 2rem 0;
+  justify-content: space-evenly;
+  width: fit-content;
 }
 
 .card {
@@ -15,15 +17,18 @@
   border-radius: 25px;
   border: 2px solid $roxo;
   transition: all 0.2s ease-in-out;
+  width: 650px;
+  background-color: $preto;
+  overflow: hidden;
 
   &:hover {
-    scale: 1.1;
+    scale: 1.05;
   }
 
   &__imagem {
-    max-width: 400px;
+    border-radius: 25px;
+    max-width: 100%;
     height: auto;
-    margin: 0 auto;
     padding: 1rem;
   }
 
@@ -72,6 +77,14 @@
     p {
       margin: 0;
     }
+  }
+
+  &__descricao {
+    font-family: $fonte-padrao;
+    color: $roxo;
+    text-shadow: 2px 2px 2px $azul-escuro;
+    font-size: 1.15rem;
+    padding: 1em;
   }
 
 }
